crates/internal/brink-test-harness/tests/snapshots/oracle_snapshots__tier1__variables__I006-multiple-constant-references.snap
---
source: crates/internal/brink-test-harness/tests/oracle_snapshots.rs
expression: case_snapshot
---
case: tier1/variables/I006-multiple-constant-references
oracle: 1, brink: 1, matched: 1
passing: 1/1

=== episode [] === PASS
> "success\n" [Done]
outcome: Done
