crates/internal/brink-test-harness/tests/snapshots/oracle_snapshots__tier1__variables__I007-set-non-existant-variable.snap
---
source: crates/internal/brink-test-harness/tests/oracle_snapshots.rs
expression: case_snapshot
---
case: tier1/variables/I007-set-non-existant-variable
oracle: 1, brink: 1, matched: 1
passing: 1/1

=== episode [] === PASS
> "Hello world.\n" [Done]
outcome: Done
