crates/internal/brink-test-harness/tests/snapshots/oracle_snapshots__tier1__variables__I009-temp-usage-in-options.snap
---
source: crates/internal/brink-test-harness/tests/oracle_snapshots.rs
expression: case_snapshot
---
case: tier1/variables/I009-temp-usage-in-options
oracle: 1, brink: 1, matched: 1
passing: 1/1

=== episode [0] === PASS
> "" [Choices: "1" (0) -> 0]
> "1\n" [Continue]
> "End of choice\n" [Continue]
> "this another\n" [Done]
outcome: Done
