crates/internal/brink-test-harness/tests/snapshots/oracle_snapshots__tier1__variables__I010-temp-not-found.snap
---
source: crates/internal/brink-test-harness/tests/oracle_snapshots.rs
expression: case_snapshot
---
case: tier1/variables/I010-temp-not-found
oracle: 1, brink: 1, matched: 1
passing: 1/1

=== episode [] === PASS
> "0\n" [Continue]
> "hello\n" [Done]
outcome: Done
