crates/internal/brink-test-harness/tests/snapshots/oracle_snapshots__tier1__variables__I011-temporaries-at-global-scope.snap
---
source: crates/internal/brink-test-harness/tests/oracle_snapshots.rs
expression: case_snapshot
---
case: tier1/variables/I011-temporaries-at-global-scope
oracle: 1, brink: 1, matched: 1
passing: 1/1

=== episode [] === PASS
> "54\n" [Done]
outcome: Done
