crates/internal/brink-test-harness/tests/snapshots/oracle_snapshots__tier1__variables__I012-variable-declaration-in-conditional.snap
---
source: crates/internal/brink-test-harness/tests/oracle_snapshots.rs
expression: case_snapshot
---
case: tier1/variables/I012-variable-declaration-in-conditional
oracle: 1, brink: 1, matched: 1
passing: 1/1

=== episode [] === PASS
> "5\n" [Done]
outcome: Done
