crates/internal/brink-test-harness/tests/snapshots/oracle_snapshots__tier1__variables__I015-variable-tunnel.snap
---
source: crates/internal/brink-test-harness/tests/oracle_snapshots.rs
expression: case_snapshot
---
case: tier1/variables/I015-variable-tunnel
oracle: 1, brink: 1, matched: 1
passing: 1/1

=== episode [] === PASS
> "STUFF\n" [Ended]
outcome: Ended
